TSPS-316 remove all unhelpful "any()" matchers from our tests (#125)
Co-authored-by: Jose Soto <jsoto@broadinstitute.org>